--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,3 +2,17 @@
     margin: 0
     padding: 0
     box-sizing: border-box
+
+.header1
+   padding: 5px
+   background-color: #1E1E40
+   color: white
+   .btn
+       padding: 10px
+
+.header2
+    padding: 15px
+
+.rounded
+    width: 75px
+    height: 75px
