--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,11 +4,15 @@
     box-sizing: border-box
 
 .header1
-   padding: 5px
-   background-color: #1E1E40
+   padding-top: 5px
+   padding-bottom: 5px
+   padding-left: 13px
+   padding-right: 13px
+   background-color: rgb(27, 38, 56)
    color: white
-   .btn
-       padding: 10px
+   p
+       margin-bottom: 0
+       text-align: center
 
 .header2
     padding: 15px
@@ -16,3 +20,18 @@
 .rounded
     width: 75px
     height: 75px
+
+.row
+    .col
+        background-color: rgb(27, 38, 56)
+        padding-left: 3rem
+        padding-right: 3rem
+        padding-top: 10%
+        p
+            color: red
+            margin-bottom: 0.4rem
+            margin-top: 0
+        h1
+            color: white
+            font-weight: bold
+            
