--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,8 +4,8 @@
     box-sizing: border-box
 
 .header1
-   padding-top: 5px
-   padding-bottom: 5px
+   padding-top: 7px
+   padding-bottom: 7px
    padding-left: 13px
    padding-right: 13px
    background-color: rgb(27, 38, 56)
@@ -15,23 +15,87 @@
        text-align: center
 
 .header2
-    padding: 15px
+    padding-top: 15px
+    padding-bottom: 15px
+    padding-left: 30px
+    padding-right: 30px
+    display: flex
+    justify-content: space-between
+    .btn
+        padding: 0
+    .menu
+        height: 25px
+        width: 30px
+        align-self: center
+    .logo
+        width: 75px
+        height: 75px
+    .person
+        width: 30px
+        height: 30px
+        align-self: center
 
 .rounded
     width: 75px
     height: 75px
 
-.row
-    .col
-        background-color: rgb(27, 38, 56)
-        padding-left: 3rem
-        padding-right: 3rem
-        padding-top: 10%
+.principal
+    .row
+        .col
+            background-color: rgb(27, 38, 56)
+            padding-left: 3rem
+            padding-right: 3rem
+            padding-top: 10%
+            p
+                color: red
+                margin-bottom: 0.4rem
+                margin-top: 0
+            h1
+                color: white
+                font-weight: bold
+
+.cositas
+    padding-left: 6%
+    padding-right: 6%
+    padding-bottom: 30px
+    padding-top: 50px
+    .card-img-top
+        height: 20rem
+    .card
+        border: none
+    .card-body
+        padding-right: 0
+        padding-left: 0
+    .btn
+        padding: 0
+        font-size: 1.2rem
+        font-weight: bold
+    p
+        margin-bottom: 0px
+    .modal-body
         p
-            color: red
-            margin-bottom: 0.4rem
-            margin-top: 0
-        h1
-            color: white
-            font-weight: bold
+            font-size: 1rem
+            font-weight: normal
+
+
+.footer
+    background-color: rgb(27, 38, 56)
+    padding-right: 10%
+    padding-left: 10%
+    padding-bottom: 4rem
+    padding-top: 6rem
+    h6
+        color: white
+        font-weight: bold
+    a
+        color: #b9b6b6
+        text-decoration: none
+    p
+        color: #b9b6b6
+        margin-bottom: 0
+    ul
+        padding-left: 1.3rem
+        margin-bottom: 0
+    li
+        color: #b9b6b6
             
