--- a/sass/style.sass
+++ b/sass/style.sass
@@ -61,6 +61,7 @@
     padding-top: 50px
     .card-img-top
         height: 20rem
+        object-fit: cover
     .card
         border: none
     .card-body
