--- a/css/style.css
+++ b/css/style.css
@@ -121,4 +121,50 @@
   color: #b9b6b6;
 }
 
+@media only screen and (max-width: 812px) {
+  .principal .row {
+    display: block;
+  }
+  .principal .row .col-7 {
+    width: 100%;
+  }
+  .principal .row .col {
+    padding-top: 5%;
+    padding-bottom: 10%;
+  }
+
+  .cositas .row {
+    display: block;
+  }
+  .cositas .card-body {
+    padding-bottom: 0;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .principal .row .col {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .cositas {
+    padding-bottom: 10px;
+    padding-top: 30px;
+  }
+
+  .footer {
+    padding-top: 4rem;
+    padding-bottom: 2rem;
+  }
+  .footer .row {
+    display: block;
+  }
+  .footer .row .col-3 {
+    width: 100%;
+    padding-bottom: 1rem;
+  }
+  .footer .row .col-6 {
+    width: 100%;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
