--- a/sass/style.sass
+++ b/sass/style.sass
@@ -99,4 +99,41 @@
         margin-bottom: 0
     li
         color: #b9b6b6
+
+@media only screen and (max-width: 812px)
+    .principal
+        .row
+            display: block
+            .col-7
+                width: 100%
+            .col
+                padding-top: 5%
+                padding-bottom: 10%
+
+    .cositas
+        .row
+            display: block
+        .card-body
+            padding-bottom: 0
             
+@media only screen and (max-width: 600px)
+    .principal
+        .row
+            .col
+                padding-left: 1rem
+                padding-right: 1rem
+
+    .cositas
+        padding-bottom: 10px
+        padding-top: 30px
+
+    .footer
+        padding-top: 4rem
+        padding-bottom: 2rem
+        .row
+            display: block
+            .col-3
+                width: 100%
+                padding-bottom: 1rem
+            .col-6
+                width: 100%
